--- a/ors-config.json
+++ b/ors-config.json
@@ -127,15 +127,15 @@
             "elevation_cache_clear": false,
             "instructions": true,
             "maximum_distance": 50000000,
-            "maximum_distance": 50000000,
-            "maximum_distance": 50000000,
+            "maximum_distance_dynamic_weights": 50000000,
+            "maximum_distance_avoid_areas": 50000000,
             "maximum_waypoints": 50,
             "maximum_snapping_radius": 400,
             "maximum_avoid_polygon_area": 200000000,
             "maximum_avoid_polygon_extent": 20000,
-            "maximum_distance": 50000000,
+            "maximum_distance_alternative_routes": 50000000,
             "maximum_alternative_routes": 3,
-            "maximum_distance": 50000000,
+            "maximum_distance_round_trip_routes": 50000000,
             "maximum_speed_lower_bound": 80,
             "preparation": {
               "min_network_size": 200,
